--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "react-slider": "^2.0.6",
     "react-slideshow-image": "^4.2.1",
     "styled-components": "^6.0.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "axios": "^1.3.4",
+    "@reduxjs/toolkit": "^1.9.3",
+    "react-toastify": "^9.1.2",
+    "@tremor/react": "^2.1.0",
+    "react-redux": "^8.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
