--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@reduxjs/toolkit": "^1.9.3",
     "react-toastify": "^9.1.2",
     "@tremor/react": "^2.1.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
