--- a/package.json
+++ b/package.json
@@ -8,23 +8,24 @@
     "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.13.7",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@tremor/react": "^2.1.0",
+    "axios": "^1.3.4",
+    "firebase": "^9.23.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-slider": "^2.0.6",
     "react-slideshow-image": "^4.2.1",
-    "styled-components": "^6.0.2",
-    "web-vitals": "^2.1.0",
-    "axios": "^1.3.4",
-    "@reduxjs/toolkit": "^1.9.3",
     "react-toastify": "^9.1.2",
-    "@tremor/react": "^2.1.0",
-    "react-redux": "^8.0.5",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "styled-components": "^6.0.2",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
